# Jarvix

./: .env.example  .gitignore  CHANGELOG.md  GITHUB_SETUP.md  LICENSE  README.md  RELEASE_NOTES_V0.1.0.md  pyproject.toml
src/: __init__.py  main.py  version.py
src/ai/: __init__.py  client.py
src/config/: __init__.py  settings.py
src/memory/: __init__.py  notes_store.py
src/safety/: __init__.py  command_safety.py
src/tools/: __init__.py  calculator.py  chat_actions.py  launcher.py  system_info.py
src/ui/: __init__.py  main_window.py  theme.py  workers.py
src/voice/: __init__.py  speech_service.py  transcriber.py
tests/: test_ai_client.py  test_calculator.py  test_chat_actions.py  test_command_safety.py  test_launcher.py  test_notes_store.py  test_settings.py  test_speech_service.py  test_system_info.py  test_transcriber.py  test_ui_smoke.py
