[project]
name = "jarvix"
version = "0.1.0"
description = "A local-first desktop AI assistant starter built with Python and PySide6."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "zyad" },
]
dependencies = [
  "PySide6>=6.7",
  "openai>=1.99.0",
  "google-genai>=1.0",
  "psutil>=6.0",
  "pyttsx3>=2.90",
  "faster-whisper>=1.0",
  "numpy>=1.26",
  "sounddevice>=0.5",
  "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
jarvix = "main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
